frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
.userBox {
    background-color: var(--color-primary-background);
    border: 1px solid var(--color-gray-300);
    border-radius: var(--border-radius);
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    max-width: var(--right-panel-width);
    position: relative;
}
.avatar {
    height: 36px;
    width: 36px;
}

#enhancedName {
    font-weight: 400 !important;
    margin-bottom: var(--size-xSmall) !important;
}

.enhancedBio {
    color: var(--color-gray-500);
    display: flex;
    font-size: 12px;
    font-weight: 300;
    -webkit-line-clamp: 2; /* number of lines to show */
    line-height: 16px; /* fallback */
    margin-bottom: 4px !important;
    margin-top: 0 !important;
    max-height: 32px; /* fallback */
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: break-word;
}

.enhancedTextSection {
    display: flex;
    flex-direction: column;
    row-gap: var(--size-xxSmall);
}

.userEnhanced {
    padding: 16px 28px;
    position: relative;
}

.enhancedSocial {
    align-items: center;
    color: var(--color-gray-500) !important;
    column-gap: 6px;
    display: flex;
}

.enhancedSocialText {
    color: var(--text-primary) !important;
    font-size: 12px;
    margin: 0 !important;
}

.userMainSection {
    border-bottom: 1px solid var(--color-gray-300);
    box-sizing: border-box;
    column-gap: var(--size-small);
    display: flex;
    flex-direction: row;
    padding-bottom: var(--size-medium);
    padding-left: 22px;
    padding-right: 22px;
    padding-top: var(--size-medium);
}

.userDetailsSection {
    display: flex;
    padding-bottom: var(--size-medium);
    padding-left: 22px;
    padding-right: 22px;
    padding-top: var(--size-medium);
}

.userAvatarWrapper {
    align-items: flex-start;
    display: flex;
    justify-content: center;
}

.socialIcons {
    align-items: center;
    display: flex;
    margin-top: 8px;
}

.socialIcon {
    fill: var(--color-gray-400);
    height: 20px;
    margin-right: 6px;
    width: 20px;
}

.skeletonWrapper {
    display: flex;
    flex-direction: row;
    padding: 10px 30px 0;
    width: var(--right-panel-width);
}

.avatarWrapper {
    display: flex;
    height: 100%;
    justify-content: center;
    margin-right: 10px;
}

.headerWrapper {
    display: flex;
    flex-direction: column;
    font-weight: 400;
    padding-right: 20px;
    row-gap: var(--size-xxSmall);
    width: 100%;
}

.userText {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
}

.userIdHeader {
    color: var(--text-primary);
    font-size: 14px;
    font-weight: 300;
    margin: 0;
    text-overflow: ellipsis;
    white-space: nowrap;
    // Spacing for the star icon.
    width: calc(100% - 50px);
}

.userIdSubHeader {
    color: var(--color-gray-500);
    display: block;
    font-size: 12px;
    line-height: 17px;
    margin: 0 !important;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
}

.userInfoWrapper {
    color: var(--color-gray-500);
    font-size: 13px;
    padding-right: 25px;
    width: 100%;
}

.userProfile {
    background-color: var(--color-gray-200);
    border-radius: 50%;
    height: 60px;
    width: 60px;
}

.tagEllipsis {
    display: block;
    max-width: 160px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.expandArrow {
    cursor: pointer;
    flex: 0 0 16px;
    margin-top: 4px;
    opacity: 0.7;
    transition: 0.2s;
}

.starIconWrapper {
    margin: auto;
    position: absolute;
    right: 22px;
    top: var(--size-medium);
    width: var(--size-medium);

    &:hover {
        cursor: pointer;
    }
}

.starredIcon {
    color: var(--color-yellow-200);
    fill: var(--color-yellow-200);
    stroke: var(--color-yellow-200);
}

.unstarredIcon {
    color: var(--color-gray-500);
    fill: var(--color-gray-500);
    stroke: var(--color-gray-500);
}

.deviceDetails {
    align-items: center;
    column-gap: 6px;
    display: flex;
}

.userIdentifier {
    margin-top: 0;
}

.tooltip {
    color: var(--color-gray-500);
    position: absolute;
    right: var(--size-medium);
    top: var(--size-medium);
}

.blurred {
    filter: blur(4px);
}

.enhancedLinksGrid {
    display: grid;
    grid-auto-rows: 20px;
    grid-template-columns: 1fr 1fr;
}

.enableClearbit {
    padding: var(--size-medium) 22px;
}

